<resources>
    <string name="app_name">게첨관리</string>

    <!-- 권한 팝업 -->
    <string name="alert_title">알림</string>
    <string name="alert_message">앱 실행의 필수 권한(카메라,위치정보,저장)이 허용되지 않아 앱을 종료합니다.\n권한을 변경하시겠습니까?</string>
    <string name="alert_go_permission">권한 다시 설정</string>
    <string name="alert_finish">앱 종료</string>

    <!-- gps 설정 팝업 -->
    <string name="gps_alert_message">현위치 확인을 위해 단말기 설정에서 \'위치\' 사용을 허용해주세요.</string>
    <string name="gps_alert_go_setting">설정</string>
    <string name="gps_alert_cancel">취소</string>

    <!-- main 페이지 버튼 -->
    <string name="main_as">AS</string>
    <string name="main_voa">VOA</string>
    <string name="main_install">설치실사</string>
    <string name="main_posting">게첨</string>
    <string name="main_qr">QR</string>
    <string name="main_car">차량등록</string>

    <!-- QR 주소 검색 -->
    <string name="btn_qr_search">QR코드 촬영</string>
    <string name="btn_search">검색</string>
    <string name="txt_addr_hint">단지 주소를 입력해주세요.</string>
    <string name="btn_submit">등 록</string>

    <!-- QR 스캔 -->
    <string name="txt_qr">QR코드촬영</string>
    <string name="txt_qr_desc">QR코드를 촬영해주세요.</string>


    <!-- 주간 캘린더 요일 -->
    <string name="txt_mon">월</string>
    <string name="txt_tue">화</string>
    <string name="txt_wed">수</string>
    <string name="txt_thu">목</string>
    <string name="txt_fri">금</string>
    <string name="txt_sat">토</string>
    <string name="txt_sun">일</string>


</resources>