<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.QRSearchActivity">

    <include
        android:id="@+id/header"
        layout="@layout/view_main_header"/>

    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header">

        <EditText
            android:id="@+id/edit_addr"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/txt_addr_hint"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_addr"
            android:layout_alignEnd="@id/edit_addr">

            <Button
                android:id="@+id/btn_qr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/btn_qr_search" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toRightOf="@id/btn_qr"
                android:text="@string/btn_search" />
        </RelativeLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lv_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_layout"
        android:layout_above="@id/btn_submit"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_submit" />

    <WebView
        android:id="@+id/wv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>


</RelativeLayout>
