<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WeeklyActivity">
    <!-- year month week layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ymwLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/fmk_color_toolbar"
        app:layout_constraintDimensionRatio="7:0.85"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ymwTxtView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- <android.support.v7.widget.AppCompatImageButton android:id="@+id/ymwNextImgBtn"
            android:src="@drawable/ic_arrow_forward"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/daysLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fmk_color_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/ymwLayout">
        
        <View
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="2px"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sunTxtView"
            style="@style/days_style"
            android:text="@string/txt_sun"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@+id/monTxtView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/monTxtView"
            style="@style/days_style"
            android:text="@string/txt_mon"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@+id/tueTxtView"
            app:layout_constraintStart_toEndOf="@+id/sunTxtView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tueTxtView"
            style="@style/days_style"
            android:text="@string/txt_tue"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@+id/wedTxtView"
            app:layout_constraintStart_toEndOf="@+id/monTxtView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/wedTxtView"
            style="@style/days_style"
            android:text="@string/txt_wed"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@+id/thuTxtView"
            app:layout_constraintStart_toEndOf="@+id/tueTxtView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/thuTxtView"
            style="@style/days_style"
            android:text="@string/txt_thu"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@+id/friTxtView"
            app:layout_constraintStart_toEndOf="@+id/wedTxtView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/friTxtView"
            style="@style/days_style"
            android:text="@string/txt_fri"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toStartOf="@+id/satTxtView"
            app:layout_constraintStart_toEndOf="@+id/thuTxtView"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/satTxtView"
            style="@style/days_style"
            android:text="@string/txt_sat"
            app:layout_constraintDimensionRatio="2:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/friTxtView"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/daysRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fmk_color_toolbar"
        app:layout_constraintTop_toBottomOf="@+id/daysLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>